# mcp3x6x-c-lib

./: LICENSE  README.md
examples/: README.md
examples/mcp3x6x-esp-arduino/: mcp3x6x-esp-arduino.ino  spi_bus_hal.c  spi_bus_hal.h  spi_mcp3x6x.c  spi_mcp3x6x.h
examples/mcp3x6x-esp-idf/: CMakeLists.txt  mcp3x6x-example.c  spi_bus_hal.c  spi_bus_hal.h  spi_mcp3x6x.c  spi_mcp3x6x.h  spi_mcp3x6x_def.h
examples/mcp3x6x-esp-idf-scan-irq/: CMakeLists.txt  mcp3x6x-scan-irq.c  spi_mcp3x6x.c  spi_mcp3x6x.h  spi_mcp3x6x_def.h
examples/mcp3x6x-esp-idf-scan-noirq/: CMakeLists.txt  mcp3x6x-scan-noirq.c  spi_mcp3x6x.h
examples/mcp3x6x-pico/: CMakeLists.txt  mcp3x6x-example.c  spi_bus_hal.c  spi_bus_hal.h  spi_mcp3x6x.h
src/: spi_mcp3x6x.c  spi_mcp3x6x.h
